# practice-of-information-systems

./: .env.example  Makefile  go.mod  interim_presentation.html  interim_presentation.md  package-lock.json
back/: build.ps1  difficultysettings.go  favorites.go  go.mod  history.go  main.go  musicdata.sql  spotify.go
back/test_tools/: spotify_client.go
cmd/api/: main.go
decoy/: .prettierrc  app.json
decoy/backend/: .env  pyproject.toml  yasasheet.db
decoy/backend/app/: main.py
decoy/backend/app/core/: config.py  database.py
decoy/backend/app/models/: songs.py
decoy/backend/sql/: init.sql
decoy/mobile/yasasheet/: App.tsx  app.json  package-lock.json  package.json
final_presentation/: presentation.md
front/: .gitignore  package-lock.json  package.json  vite.config.ts
front/public/: callback.html
front/src/: App.tsx  Auth.tsx  audioRecorderProcessor.tsx  favorite.tsx  home.tsx  main.tsx  practice.tsx  practice_past.tsx  recommend.tsx  result.tsx  search.tsx
front/src/components/: Navbar.css  Navbar.tsx  OSMDPlayer.tsx  OSMDPlayer_past.tsx  OSMDPlayer_ver2.tsx  link.css  link.tsx  musicItemIcon.css  musicItemIcon.tsx  musicItemList.tsx
front/src/contexts/: AuthContext.tsx
front/src/css/: Home.css  favorite.css  recommend.css  search.css
front/src/types/: types.ts
front/src/utils/: stringUtils.ts
internal/db/: gorm.go
tech/: calculate_proficiency.py  calculate_proficiency_runner.py  extract_notes.py  main.py  pyproject.toml  sheet.py
tech/archive/: find_playing_measure.py
tech/data/: testsheet.xml  testsheet_pick.xml
(+16 files in other folders)
