[project]
name = "tech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.12",
    "librosa>=0.11.0",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "pydantic>=2.11.4",
    "scipy>=1.15.3",
    "uvicorn>=0.34.3",
]
